Improve performance of profiling process.

The bulk of the performance overhead comes from lock contention for
BacktraceStorage. This CL shards BacktraceStorage with 64 shards, using the
Backtrace fingerprint to determine which shard to store each Backtrace in.

Bug: 769583
Change-Id: Id46a36113dd0973d26917fd7a4230b4a9e7272e1
Reviewed-on: https://chromium-review.googlesource.com/688723
Reviewed-by: Brett Wilson <brettw@chromium.org>
Commit-Queue: Erik Chen <erikchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#507478}
Former-commit-id: 3b0a23ceca141150938f663d4ba889ce4e420207